--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws s3 sync ./dist s3://codebuild-soldesk
+      - aws s3 sync ./dist s3://codecommit-boris
